# selection-ml

./: README.md  pyproject.toml
src/selection_ml/: main.py
src/selection_ml/data/: data.csv
